# fxread

./: Cargo.toml  README.md  sequences.fa  sequences.fq
.github/workflows/: ci.yml  coverage.yml  rust.yml
example/: sequences.fa  sequences.fa.bz2  sequences.fa.xz  sequences.fa.zst  sequences.fq  sequences.fq.bz2  sequences.fq.xz  sequences.fq.zst
src/: fasta.rs  fastq.rs  fastqread_dyn.rs  fastqread_generic.rs  fastx.rs  lib.rs  main.rs  record.rs  utils.rs
src/io/: buffer.rs  mod.rs  parser.rs  ref_iter.rs
src/record/: index_record.rs  mod.rs  record.rs  ref_record.rs
