[package]
name = "fxread"
version = "0.2.2"
edition = "2021"
description = "A barebones fastx reader for rust"
license = "MIT"
repository = "https://github.com/noamteyssier/fxread"
documentation = "https://docs.rs/fxread"
keywords = ["bioinformatics", "sequencing", "dna"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = "1"
anyhow = "1"
